...
          title: 'Statistika',
        }}
      />
      <Tabs.Screen
        name="more"
        options={{
          tabBarAccessibilityLabel: 'Više',
          tabBarIcon: ({ color, focused }) => (
            <TabGlyph color={color} focused={focused} glyph="•••" />
          ),
          title: 'Više',
        }}
      />
...
